--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.5",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "save": "^2.4.0",
+    "swr": "^0.3.9",
+    "unfetch": "^4.2.0"
   }
 }
